2008-07-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_page_change): Deleted the code that set to
	TRUE the complete state of page four.

2008-07-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_btn_conneciton_test_clicked): Created to
	test connection.

2008-07-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_credit_sale_clicked): Replaced g_strsplit() for
	parse_rut, this should prevent an error of parse when a user
	decide to introduce a rut with or without dots and strips.

	* utils.c (parse_rut): Added function.

	* ventas.c (on_sell_button_clicked): Added 'CHASH' to sell type
	when sell directly.
	Indented some lines, deleted tabs.

2008-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c: Replaced informacion_producto() for
	informacion_producto_venta().

2008-06-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_radio_btn_type_network_toggled): Added
	function to handle the toggle on network button.
	(on_page_change): Prefer the use of if-elseif instead of many if.
	(on_page_change): Added code to deal with page two.

2008-06-25  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (main): Added an error message when
	rizoma_open_config() returns NULL.

	* admin.c (main): Added an error message when rizoma_open_config()
	returns NULL.

	* compras.c (main): Added an error message when
	rizoma_open_config() returns NULL.

2008-06-18  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CheckDocumentData): Added a new way to find the
	proper entry to check data. We check on all the entries on the wnd
	passed using wnd parameter.
	(SearchProductHistory): Deleted commented code use it with "canje"
	feature. Added short-code to product info.
	(AskElabVenc): Now we get the data here to pass it to
	CheckDocumentData() and then to IngresarCompra().
	(on_button_ok_ingress_clicked): Fixed bug that duplicated columns.
	(Save): Deleted unnecessary code.
	(AddNewProduct): Deleted function replaced by